@@ -116,10 +116,10 @@ var CloudCmd, Util, DOM, CloudFunc;
                 });
             };
             
-            this.save   = function(pUrl, pData, pCallBack){
+            this.save   = function(pUrl, pData, pCallBack, pQuery){
                 sendRequest({
                     method      : 'PUT',
-                    url         : CloudFunc.FS + pUrl,
+                    url         : CloudFunc.FS + pUrl + (pQuery || ''),
                     data        : pData,
                     callback    : pCallBack,
                     imgPosition : { top: true }
